# build-the-bot

./: CONTRIBUTING.md  package.json  pyproject.toml
.github/workflows/: black.yml  build-release.yml  flake8.yml  pytest.yml
build_the_bot/tests/: test_appstate.py  test_dataclasses.py  test_interaction.py  test_userstate.py
build_the_bot/tests/test_nlp/: test_chat_gpt.py  test_regex.py  test_spacy_training.py  test_spacy_utils.py
example/: README.md  pyproject.toml
example/example_bot/: action.py  app.py  business.py
example/example_bot/data/: example_intent.json  prompts.json
